# arelto

./: .clang-tidy  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  README.md  pyproject.toml  pyrightconfig.json  pytest.ini  start_game.py
.cache/clangd/index/: Constants.h.A7DD369E23F79A79.idx  Game.cpp.C5F41C3180C3D0CC.idx  Game.h.BED7279590B7A65D.idx  constants.h.E1C8DB5D2B71989D.idx  entity.h.9709FC3040C7B126.idx  game.cpp.0A444EE3AA872343.idx  game.h.10FBBD87FD58196A.idx  game_math.h.410AF387F825F840.idx  main.cpp.19196B36F477C608.idx  main.cpp.8C4C64A9B7EE6EF9.idx  random.cpp.C04A8AF607EECED3.idx  random.h.CBFCB2AC24DDDB29.idx
.github/workflows/: build.yml
assets/music/: strudel_sheet.txt
include/: Constants.h  GameMath.h  abilities.h  action_manager.h  audio_manager.h  collision.h  collision_manager.h  constants.h  entity.h  entity_manager.h  game.h  game_math.h  map.h  observation_manager.h  physics_manager.h  progression_manager.h  random.h  ray_caster.h  raycaster.h  render_manager.h  reward_manager.h  scene.h  types.h  ui_manager.h  upgrades.h  utils.h
include/constants/: audio_manager.h  enemy.h  exp_gem.h  game.h  map.h  player.h  progression_manager.h  projectile.h  ray_caster.h  render.h  ui.h
include/ui/: containers.h  widget.h  widgets.h
python/: diagnostics.py  rl2_env.py  rl2_gym_env.py  run_game.py
rl/: __init__.py  arelto_env.py  cartpole_ppo.py  diagnose_env.py  rl2_env.py  rl2_gym_env.py  run_game.py  run_learner.py  test_model.py
rl/algorithms/: async_ppo.py  ppo.py
rl/modules/: __init__.py  actor.py  actor_critic.py  critic.py  normalization.py  ray_encoder.py
rl/networks/: __init__.py  mlp.py
rl/storage/: rollout_storage.py
scripts/: diagnose_env.py  install_arelto.py  start_game.py  start_game_async.py
src/: action_manager.cpp  audio_manager.cpp  bindings.cpp  collision.cpp  collision_manager.cpp  entity.cpp  entity_manager.cpp  game.cpp  game_init.cpp  game_math.cpp  game_physics.cpp  game_render.cpp  main.cpp  map.cpp  observation_manager.cpp  physics_manager.cpp  progression_manager.cpp  random.cpp  ray_caster.cpp  raycaster.cpp  render_manager.cpp  reward_manager.cpp  rewards.cpp  ui_manager.cpp  utils.cpp
src/ui/: containers.cpp  widget.cpp  widgets.cpp
tests/: conftest.py  test_actor.py  test_actor_critic.py  test_critic.py  test_mlp.py  test_networks.py  test_ppo.py  test_ray_encoder.py
tests/cpp/: test_action_manager.cpp  test_collision_manager.cpp  test_entity_manager.cpp  test_helpers.h  test_observation_manager.cpp  test_occupancy_map.cpp  test_physics_manager.cpp  test_progression_manager.cpp  test_ray_caster.cpp  test_reward_manager.cpp  test_ui_manager.cpp
