[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rl2"
version = "0.1.0"
description = "Arelto (RL2): A Reinforcement Learning Rogue-Lite"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "numpy",
]

[tool.setuptools.packages.find]
include = ["rl*"]
