[build-system]
requires = ["scikit-build-core", "pybind11-stubgen", "ninja", "cmake"]
build-backend = "scikit_build_core.build"

[project]
name = "arelto"
version = "0.1.0"
description = "Arelto (RL2): A Reinforcement Learning Rogue-Lite"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "numpy",
    "rich",
]

[tool.scikit-build]
cmake.version = ">=3.10"
ninja.version = ">=1.5"
editable.mode = "inplace"
wheel.packages = ["rl"]
